--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,6 @@ python-multipart==0.0.9
 pydantic==2.8.2
 pillow==10.4.0
 pytesseract==0.3.13
-pandas==2.2.2
 openpyxl==3.1.5
 reportlab==4.2.2
 tesseract
@@ -15,5 +14,4 @@ sklearn
 python-dotenv==1.0.1
 requests==2.32.3
 pdfplumber==0.11.4
-
-
+pandas>=2.2,<2.3
